k8s/deploy-echo.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-echo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: echo1.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: cont-echo1
            port:
              number: 80
  - host: echo2.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: cont-echo2
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-echo1
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: cont-echo1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-echo1
spec:
  selector:
    matchLabels:
      app: cont-echo1
  replicas: 1
  template:
    metadata:
      labels:
        app: cont-echo1
    spec:
      containers:
      - name: cont-echo1
        image: hashicorp/http-echo
        args:
        - "-text=echo1"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: svc-echo2
  annotations:
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: cont-echo2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-echo2
  annotations:
spec:
  selector:
    matchLabels:
      app: cont-echo2
  replicas: 1
  template:
    metadata:
      labels:
        app: cont-echo2
    spec:
      containers:
      - name: cont-echo2
        image: hashicorp/http-echo
        args:
        - "-text=echo2"
        ports:
        - containerPort: 5678
